discussion/kv_engine/179404/179404_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53531: Make accessing KVBucket::ckptDestroyerTasks entries safer

Core change is that KVBucket::getCkptDestroyerTask() returns a
std::shared_ptr<> to Task rather than a raw reference.
That way the caller takes ownership of the object and can access it
safely regardless of any concurrent change to the
KVBucket::ckptDestroyerTasks struct.

Change-Id: I13b1e3ebea3c5b16d659fa95ad50bb5a14cac56c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-09-02 08:22:50.000000000
Message: 
Uploaded patch set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-02 08:32:05.000000000
Message: 
Patch Set 9: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48923/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48923/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21256/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21256/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19974/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3875:11: error: non-const lvalue reference to type "shared_ptr<...>" cannot bind to a temporary of type "shared_ptr<...>" [clang-diagnostic-error]
    auto& task = getCkptDestroyerTask(vbid);
          ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19974/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3875:11:
error: non-const lvalue reference to type "shared_ptr<...>" cannot bind to a temporary of type "shared_ptr<...>" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19974/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9674/ : FAILURE

Compile error at [2022-09-02T08:25:40.517Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3875:11:
error: non-const lvalue reference to type "shared_ptr<...>" cannot bind to a temporary of type "shared_ptr<...>"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9674/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9774/ : FAILURE

Compile error at [2022-09-02T08:26:26.835Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3875:38:
error: cannot bind non-const lvalue reference of type ?std::shared_ptr<CheckpointDestroyerTask>&? to an rvalue of type ?KVBucket::CheckpointDestroyer? {aka ?std::shared_ptr<CheckpointDestroyerTask>?}
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9774/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21935/ : FAILURE

Compile error at [2022-09-02T08:27:08.157Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3875:38:
error: cannot bind non-const lvalue reference of type ?std::shared_ptr<CheckpointDestroyerTask>&? to an rvalue of type ?KVBucket::CheckpointDestroyer? {aka ?std::shared_ptr<CheckpointDestroyerTask>?}
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21935/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30324/ : FAILURE

Compile error at [2022-09-02T08:26:36.428Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3875:11:
error: non-const lvalue reference to type "shared_ptr<...>" cannot bind to a temporary of type "shared_ptr<...>"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30324/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22294/ : FAILURE

Compile error at [2022-09-02T08:27:35.419Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3875:38:
error: cannot bind non-const lvalue reference of type ?std::shared_ptr<CheckpointDestroyerTask>&? to an rvalue of type ?KVBucket::CheckpointDestroyer? {aka ?std::shared_ptr<CheckpointDestroyerTask>?}
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22294/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23031/ : FAILURE

Compile error at [2022-09-02T08:25:14.551Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3875:11:
error: non-const lvalue reference to type "shared_ptr<...>" cannot bind to a temporary of type "shared_ptr<...>"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23031/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19195/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41123/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
